cmake_minimum_required(VERSION 2.8)
project(7kaa)

include(FindPkgConfig)
PKG_SEARCH_MODULE(SDL2 REQUIRED sdl2)
include(FindOpenAL)

set(CM7KAA_BASEDIR "${CMAKE_CURRENT_SOURCE_DIR}")

set(H_FILES
  include/ODYNARRB.h
  include/OERROR.h
  include/vga_none.h
  include/OGRPSEL.h
  include/OSNOW.h
  include/OLOG.h
  include/OSITE.h
  include/OLZW.h
  include/OINFO.h
  include/OREMOTE.h
  include/OSFRMRES.h
  include/OF_FACT.h
  include/vga_sdl.h
  include/OF_INN.h
  include/OSCROLL.h
  include/OVBROWIF.h
  include/OMOUSE2.h
  include/ONATIONA.h
  include/OTALKMSG.h
  include/OGAME.h
  include/mouse_none.h
  include/OF_MONS.h
  include/OWORLDMT.h
  include/OTECHRES.h
  include/OUNITRES.h
  include/OFIRMDIE.h
  include/file_writer.h
  include/OPLASMA.h
  include/OVGA.h
  include/ALL.h
  include/OMONSRES.h
  include/ORAWRES.h
  include/OSYS.h
  include/OGETA.h
  include/OHELP.h
  include/OTORNADO.h
  include/OF_CAMP.h
  include/surface_sdl.h
  include/OVOLUME.h
  include/ONATION.h
  include/OLONGLOG.h
  include/GAMEDEF.h
  include/ONEWS.h
  include/file_io_visitor.h
  include/OF_BASE.h
  include/config.h
  include/OU_CART.h
  include/OSPRITE.h
  include/ODYNARR.h
  include/OROCKRES.h
  include/OGFILE.h
  include/input_stream.h
  include/file_output_stream.h
  include/OVIDEO.h
  include/OBUTT3D.h
  include/OLIGHTN.h
  include/OWORLD.h
  include/OF_MARK.h
  include/OFONT.h
  include/OMUSIC.h
  include/OU_GOD.h
  include/OEXPMASK.h
  include/OTOWNRES.h
  include/mem_input_stream.h
  include/ORESDB.h
  include/ORES.h
  include/OFIRM.h
  include/OGODRES.h
  include/OB_FLAME.h
  include/OF_WAR.h
  include/dbglog.h
  include/OBULLET.h
  include/vga_util.h
  include/audio_stream.h
  include/OVGABUF.h
  include/OGAMESET.h
  include/OSLIDCUS.h
  include/gettext.h
  include/ODATE.h
  include/mouse_dinput.h
  include/OBLOB.h
  include/OEFFECT.h
  include/ORAIN.h
  include/OSPY.h
  include/ORESTXT.h
  include/audio_base.h
  include/IMGFUN.h
  include/OAUDIO.h
  include/OFILETXT.h
  include/surface_ddraw.h
  include/ODB.h
  include/OSPRTRES.h
  include/OU_CARA.h
  include/WALLTILE.h
  include/file_util.h
  include/mouse_sdl.h
  include/OU_MARI.h
  include/ODIR.h
  include/surface_none.h
  include/wav_stream.h
  include/OMOUSECR.h
  include/OUNITALL.h
  include/DMOUSE.h
  include/OPLANT.h
  include/OTOWNREC.h
  include/OSKILL.h
  include/file_reader.h
  include/OCOLTBL.h
  include/OWEATHER.h
  include/vga_ddraw.h
  include/OSPATH.h
  include/OERRCTRL.h
  include/OROCK.h
  include/OU_MONS.h
  include/CRC.h
  include/OSNOWG.h
  include/surface_base.h
  include/OB_PROJ.h
  include/surface.h
  include/ONATIONB.h
  include/OREGIONS.h
  include/OSTR.h
  include/MPTYPES.h
  include/OSE.h
  include/OVBROWSE.h
  include/OTALKRES.h
  include/OMISC.h
  include/openal_audio.h
  include/ORESX.h
  include/RESOURCE.h
  include/OMLINK.h
  include/OFILE.h
  include/OTARRAY.h
  include/OBUTTCUS.h
  include/OOPTMENU.h
  include/OWARPT.h
  include/OISOAREA.h
  include/OVGALOCK.h
  include/vga_base.h
  include/COLOR.h
  include/OMATRIX.h
  include/OSPINNER.h
  include/OTUTOR.h
  include/OFLAME.h
  include/OFIRMRES.h
  include/asmfun.h
  include/version.h
  include/OFIRERES.h
  include/KEY.h
  include/multiplayer.h
  include/OSNOWRES.h
  include/OTERRAIN.h
  include/OHSETRES.h
  include/OWALLRES.h
  include/OTownNetwork.h
  include/OBUTTON.h
  include/OCONFIG.h
  include/win32_compat.h
  include/OIMGRES.h
  include/OGET.h
  include/OBATTLE.h
  include/OREMOTEQ.h
  include/COLCODE.h
  include/OU_VEHI.h
  include/OB_HOMIN.h
  include/OFIRMALL.h
  include/OTRANSL.h
  include/OFIRMID.h
  include/OF_HARB.h
  include/dsound_audio.h
  include/player_desc.h
  include/OF_RESE.h
  include/OGF_V1.h
  include/OFIRMA.h
  include/OHILLRES.h
  include/file_input_stream.h
  include/OTOWN.h
  include/OANLINE.h
  include/OUNIT.h
  include/OSERES.h
  include/output_stream.h
  include/OF_MINE.h
  include/OBOX.h
  include/OMOUSE.h
  include/OINGMENU.h
  include/OREGION.h
  include/OREBEL.h
  include/OCRC_STO.h
  include/ORACERES.h
  include/OVQUEUE.h
  include/OSLIDER.h
  include/OSPREUSE.h
)

set(CPP_FILES
  src/file/ODB.cpp
  src/file/ODIR.cpp
  src/file/file_reader.cpp
  src/file/ORESX.cpp
  src/file/mem_input_stream.cpp
  src/file/file_util.cpp
  src/file/file_input_stream.cpp
  src/file/file_writer.cpp
  src/file/file_output_stream.cpp
  src/file/input_stream.cpp
  src/file/output_stream.cpp
  src/file/OFILE.cpp
  src/file/ORES.cpp
  src/file/ORESDB.cpp
  src/common/OMEM.cpp
  src/common/OCONFIG.cpp
  src/common/OSTR.cpp
  src/common/ODATE.cpp
  src/common/OMISC.cpp
  src/common/dbglog.cpp
  src/common/OERROR.cpp
  src/client/ODYNARRB.cpp
  src/client/ONEWSFRE.cpp
  src/client/OGFILE2.cpp
  src/client/OU_CARA2.cpp
  src/client/OSLIDCUS.cpp
  src/client/OAI_UNIT.cpp
  src/client/OWORLD_Z.cpp
  src/client/OBOX.cpp
  src/client/ORAIN3.cpp
  src/client/OTALKENG.cpp
  src/client/OGAMENCY.cpp
  src/client/OAI_TOWN.cpp
  src/client/OGAMMENU.cpp
  src/client/ORAIN1.cpp
  src/client/OAI_CAP2.cpp
  src/client/OR_TOWN.cpp
  src/client/OAI_MAIN.cpp
  src/client/OF_INN2.cpp
  src/client/OBUTT3D.cpp
  src/client/OSPRTRES.cpp
  src/client/OBLOB.cpp
  src/client/OU_GOD.cpp
  src/client/OR_MIL.cpp
  src/client/OSPY2.cpp
  src/client/OTownNetwork.cpp
  src/client/OEFFECT.cpp
  src/client/OU_CART.cpp
  src/client/OTOWNA.cpp
  src/client/OVOLUME.cpp
  src/client/ODYNARR.cpp
  src/client/OUNITS.cpp
  src/client/OSPRESMO.cpp
  src/client/OF_WAR2.cpp
  src/client/OGFILEA.cpp
  src/client/OF_WAR.cpp
  src/client/ONEWS2.cpp
  src/client/OAI_MILI.cpp
  src/client/ONEWS.cpp
  src/client/ORACERES.cpp
  src/client/OWEATHER.cpp
  src/client/OUNITATB.cpp
  src/client/OAI_ATTK.cpp
  src/client/OU_MARIT.cpp
  src/client/OREGION.cpp
  src/client/OF_BASE2.cpp
  src/client/OMP_CRC.cpp
  src/client/OFONT.cpp
  src/client/OPOWER.cpp
  src/client/OR_TRADE.cpp
  src/client/OSPRITE2.cpp
  src/client/OTORNADO.cpp
  src/client/OAI_ACT.cpp
  src/client/OR_NAT.cpp
  src/client/OBUTTON.cpp
  src/client/OGAMEND.cpp
  src/client/OGFILE3.cpp
  src/client/OUNITAAC.cpp
  src/client/OTRANSL.cpp
  src/client/OW_ROCK.cpp
  src/client/OTALKSPA.cpp
  src/client/OF_FACT.cpp
  src/client/OUNITI.cpp
  src/client/OBATTLE.cpp
  src/client/OUNITM.cpp
  src/client/OUNITAI.cpp
  src/client/OF_MINE.cpp
  src/client/OFIRMDRW.cpp
  src/client/OSPREUSE.cpp
  src/client/OMONSRES.cpp
  src/client/OGAMMAIN.cpp
  src/client/OF_CAMP2.cpp
  src/client/OAI_MARI.cpp
  src/client/OU_CARAT.cpp
  src/client/OEXPMASK.cpp
  src/client/OREGIONS.cpp
  src/client/OFIRMRES.cpp
  src/client/OLZW.cpp
  src/client/OGODRES.cpp
  src/client/OTUTOR.cpp
  src/client/ONEWSSPA.cpp
  src/client/OUNITDRW.cpp
  src/client/OTALKFRE.cpp
  src/client/OR_TECH.cpp
  src/client/OTUTOR2.cpp
  src/client/OGAMSCEN.cpp
  src/client/OUNITRES.cpp
  src/client/OFIRMIF2.cpp
  src/client/OF_RESE.cpp
  src/client/OAI_DEFE.cpp
  src/client/OTOWNBLD.cpp
  src/client/OFIRM2.cpp
  src/client/OBULLET.cpp
  src/client/OUNITA.cpp
  src/client/ONEWSENG.cpp
  src/client/OUNIT.cpp
  src/client/OIMGRES.cpp
  src/client/OB_PROJ.cpp
  src/client/OUNITAMT.cpp
  src/client/OW_FIRE.cpp
  src/client/OU_GOD2.cpp
  src/client/OSYS2.cpp
  src/client/OGAMHALL.cpp
  src/client/OF_INN.cpp
  src/client/OAI_SEEK.cpp
  src/client/OGENMAP.cpp
  src/client/ONEWSGER.cpp
  src/client/OSNOW1.cpp
  src/client/OSNOWG.cpp
  src/client/OMUSIC.cpp
  src/client/OWARPT.cpp
  src/client/OLOG.cpp
  src/client/OSYS3.cpp
  src/client/OF_MARK2.cpp
  src/client/OSKILL.cpp
  src/client/OTECHRES.cpp
  src/client/OMOUSECR.cpp
  src/client/OFILETXT.cpp
  src/client/OHELP.cpp
  src/client/OF_HARB2.cpp
  src/client/OU_MONS.cpp
  src/client/OSNOW2.cpp
  src/client/OAI_ECO.cpp
  src/client/OUNITD.cpp
  src/client/OFIRMIF.cpp
  src/client/OTOWNIND.cpp
  src/client/OAI_DIPL.cpp
  src/client/OGAMSING.cpp
  src/client/OUNITIF.cpp
  src/client/OAI_TRAD.cpp
  src/client/OROCKRES.cpp
  src/client/OAI_TALK.cpp
  src/client/OANLINE.cpp
  src/client/OF_MONS.cpp
  src/client/OGENHILL.cpp
  src/client/OSCROLL.cpp
  src/client/OF_MINE2.cpp
  src/client/OPLASMA.cpp
  src/client/OSPRITE.cpp
  src/client/OOPTMENU.cpp
  src/client/OF_MARK.cpp
  src/client/OAI_CAPT.cpp
  src/client/OSPRITEA.cpp
  src/client/OSPYA.cpp
  src/client/OUNIT2.cpp
  src/client/OAI_QUER.cpp
  src/client/OTALKMSG.cpp
  src/client/ORAWRES.cpp
  src/client/OSPATH.cpp
  src/client/OF_CAMP.cpp
  src/client/OR_RANK.cpp
  src/client/OUNITAT2.cpp
  src/client/OMATRIX.cpp
  src/client/OW_WALL.cpp
  src/client/OR_SPY.cpp
  src/client/OCRC_STO.cpp
  src/client/OAI_GRAN.cpp
  src/client/OB_FLAME.cpp
  src/client/OBULLETA.cpp
  src/client/OSITEDRW.cpp
  src/client/OBUTTCUS.cpp
  src/client/OTOWNAI.cpp
  src/client/OSPREOFF.cpp
  src/client/OGAMESET.cpp
  src/client/OHILLRES.cpp
  src/client/OAI_ACT2.cpp
  src/client/OU_MARIF.cpp
  src/client/OUNITAT3.cpp
  src/client/OVBROWIF.cpp
  src/client/AM.cpp
  src/client/OINGMENU.cpp
  src/client/OU_MARI2.cpp
  src/client/OPLANT.cpp
  src/client/OFIRMDIE.cpp
  src/client/OINFO.cpp
  src/client/OSE.cpp
  src/client/OR_ECO.cpp
  src/client/OSYS.cpp
  src/client/OAI_SPY.cpp
  src/client/OGAMEMP.cpp
  src/client/OR_AI.cpp
  src/client/OUNITAAT.cpp
  src/client/OTALKGER.cpp
  src/client/OF_HARB.cpp
  src/client/OF_BASE.cpp
  src/client/OAI_MAR2.cpp
  src/client/OTOWN.cpp
  src/client/OFIRMAI.cpp
  src/client/OUNITAC.cpp
  src/client/OLIGHTN2.cpp
  src/client/OAI_INFO.cpp
  src/client/OUNITAT.cpp
  src/client/OSPY.cpp
  src/client/OGF_V1.cpp
  src/client/OTALKRES.cpp
  src/client/OREBEL.cpp
  src/client/OGAMCRED.cpp
  src/client/OVQUEUE.cpp
  src/client/OGAME.cpp
  src/client/OWALLRES.cpp
  src/client/OU_MARIS.cpp
  src/client/OLIGHTN.cpp
  src/client/ORAIN2.cpp
  src/client/OVBROWSE.cpp
  src/client/OGRPSEL.cpp
  src/client/OGAMSCE2.cpp
  src/client/OU_MARI.cpp
  src/client/OU_VEHI.cpp
  src/client/OR_NEWS.cpp
  src/client/OWORLD_M.cpp
  src/client/OVIDEO.cpp
  src/client/OTOWNRES.cpp
  src/client/ONATIONB.cpp
  src/client/OTOWNIF.cpp
  src/client/OSFRMRES.cpp
  src/client/OUNITHB.cpp
  src/client/OW_PLANT.cpp
  src/client/OF_FACT2.cpp
  src/client/OGETA.cpp
  src/client/OFIRMIF3.cpp
  src/client/OGFILE.cpp
  src/client/OTOWNDRW.cpp
  src/client/OW_SOUND.cpp
  src/client/OTERRAIN.cpp
  src/client/OUNITAM.cpp
  src/client/OU_CARAS.cpp
  src/client/OFLAME.cpp
  src/client/OAI_MONS.cpp
  src/client/OFIRMA.cpp
  src/client/OUNITIND.cpp
  src/client/OROCK.cpp
  src/client/OAI_BUIL.cpp
  src/client/OB_HOMIN.cpp
  src/client/ONATIONA.cpp
  src/client/OSERES.cpp
  src/client/OAI_MAR3.cpp
  src/client/OSNOWRES.cpp
  src/client/OSPATHBT.cpp
  src/client/OF_RESE2.cpp
  src/client/OFIRM.cpp
  src/client/OSPREDBG.cpp
  src/client/OU_CARA.cpp
  src/client/OLONGLOG.cpp
  src/client/OWORLD.cpp
  src/client/OSITE.cpp
  src/video/common/OVGALOCK.cpp
  src/video/common/OVGABUF2.cpp
  src/video/common/OVGABUF.cpp
  src/video/common/vgautil.cpp
  src/video/common/OCOLTBL.cpp
  src/video/common/vgautil2.cpp
  #src/video/ddraw/surface_ddraw.cpp
  #src/video/ddraw/vga_win.cpp
  #src/video/ddraw/OVGA.cpp
  #src/video/none/vga_none.cpp
  #src/video/none/surface_none.cpp
  src/video/sdl/surface_sdl.cpp
  src/video/sdl/vga_sdl.cpp
  #src/input/dinput/OMOUSE.cpp
  #src/input/none/OMOUSE.cpp
  src/input/sdl/OMOUSE.cpp
  src/imgfun/IC_R.cpp
  src/imgfun/IB.cpp
  src/imgfun/I_SNOW.cpp
  src/imgfun/IB_TRD.cpp
  src/imgfun/IR_BAR.cpp
  src/imgfun/IB_RD.cpp
  src/imgfun/IR.cpp
  src/imgfun/IB_ATD.cpp
  src/imgfun/IR_M.cpp
  src/imgfun/IB2.cpp
  src/imgfun/IB_R.cpp
  src/imgfun/IB_ATR.cpp
  src/imgfun/IR_AM.cpp
  src/imgfun/I_BLACK.cpp
  src/imgfun/IR_A.cpp
  src/imgfun/IB_A.cpp
  src/imgfun/I_PIXEL.cpp
  src/imgfun/IB_ATDM.cpp
  src/imgfun/I_FONT.cpp
  src/imgfun/IB_ATRDM.cpp
  src/imgfun/IB_TR.cpp
  src/imgfun/IB_DW.cpp
  src/imgfun/IB_TDM.cpp
  src/imgfun/IB_TD.cpp
  src/imgfun/IJ_T.cpp
  src/imgfun/CRC.cpp
  src/imgfun/I_EMASK.cpp
  src/imgfun/IB_ATRD.cpp
  src/imgfun/IB_AT.cpp
  src/imgfun/IC.cpp
  src/imgfun/I_FREMAP.cpp
  src/imgfun/IB_AR.cpp
  src/imgfun/I_EREMAP.cpp
  src/imgfun/I_BAR.cpp
  src/imgfun/I_LINE.cpp
  src/imgfun/IB_T.cpp
  src/imgfun/IB_32.cpp
  src/imgfun/I_READ.cpp
  src/imgfun/IB_TRDM.cpp
  #src/audio/dsound/dsound_audio.cpp
  src/audio/openal/openal_audio.cpp
  src/audio/openal/wav_stream.cpp
  src/multiplayer/common/OERRCTRL.cpp
  src/multiplayer/common/OREMOTE.cpp
  src/multiplayer/common/OREMOTEM.cpp
  src/multiplayer/common/OREMOTEQ.cpp
  src/multiplayer/common/multiplayer.cpp
  src/multiplayer/common/OREMOTE2.cpp
  src/multiplayer/common/player_desc.cpp

)


set(CM7KAA_INCLUDE_DIR "${CM7KAA_BASEDIR}/include/")

#add_definitions(-DNO_WINDOWS)
#add_definitions(-DUSE_SDL)
#add_definitions(-DNO_ASM)
#add_definitions(-DUSE_OPENAL)
#add_definitions(-DPACKAGE_NAME="7kaa")
#add_definitions(-DOPENAL_AL_H=<AL/al.h>)
#add_definitions(-DOPENAL_ALC_H=<AL/alc.h>)
add_definitions(-include "config.h")
add_definitions(-D_REENTRANT)
add_definitions(-DLOCALEDIR="${CMAKE_INSTALL_PREFIX}/share/7kaa")

include_directories("${CM7KAA_INCLUDE_DIR}")
include_directories(${SDL2_INCLUDE_DIRS})
include_directories("${OPENAL_INCLUDE_DIR}")
add_executable(7kaa
	${H_FILES}
	${CPP_FILES}
)



target_link_libraries(7kaa ${SDL2_LIBRARIES} ${OPENAL_LIBRARY} enet)
